refactor: oss 1계층